--- a/src/app/modules/gerencial/components/clientes/components/add/add.component.html
+++ b/src/app/modules/gerencial/components/clientes/components/add/add.component.html
@@ -27,8 +27,9 @@
             <mat-label>Status</mat-label>
             <mat-icon matPrefix>info</mat-icon>
             <mat-select matInput formControlName="status" type="text" required>
-              <mat-option value="ativo">Servido</mat-option>
-              <mat-option value="inativo">Cancelado</mat-option>
+              <mat-option value="servido">Servido</mat-option>
+              <mat-option value="cancelado">Cancelado</mat-option>
+              <mat-option value="andando">Andando</mat-option>
               <mat-option value="pendente">Pendente</mat-option>
             </mat-select>
           </mat-form-field>
