--- a/src/app/modules/gerencial/components/dashboard/dashboard.component.html
+++ b/src/app/modules/gerencial/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard">
-  
+
   <div class="search">
     <app-search
       [(textSearch)]="searchText"
@@ -47,7 +47,7 @@
     <app-dashboard-card
       [number]="formatNumber(totalNotifications)"
       [description]="'Pedidos recebidos'"
-      [icon]="'person_outline'"
+      [icon]="'notifications'"
       [iconContainerColor]="'#000000'"
     >
     </app-dashboard-card>
