--- a/src/app/modules/home/forgot-password/forgot-password.component.html
+++ b/src/app/modules/home/forgot-password/forgot-password.component.html
@@ -40,7 +40,7 @@
     [disabled]="forgotForm.invalid"
   >
 
-    Continuar
+    CONTINUAR
   </app-button>
   <app-loading-effect></app-loading-effect>
   <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
