--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -20,6 +20,12 @@
       </mat-form-field>
     </div>
 
+    <div class="cadastro">
+      <h4>Você é cliente ?</h4>
+      <li class="link_cadastro">
+        <a><button [routerLink]="['../account']" class="register_button">Cadastre-se</button></a>
+      </li>
+    </div>
   </div>
   <div class="home-components">
     <div class="content">
