--- a/src/app/modules/home/reset-password/reset-password.component.html
+++ b/src/app/modules/home/reset-password/reset-password.component.html
@@ -45,7 +45,7 @@
       </mat-icon>
     </mat-form-field>
   </form>
-  <app-button [fullSize]="true" (click)="resetPassword()" [disabled]="resetForm.invalid">Confirmar</app-button>
+  <app-button [fullSize]="true" (click)="resetPassword()" [disabled]="resetForm.invalid">CONFIRMAR</app-button>
   <app-loading-effect></app-loading-effect>
   <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
   <p *ngIf="successMessage">{{ successMessage }}</p>
