--- a/src/app/modules/home/signin/signin.component.html
+++ b/src/app/modules/home/signin/signin.component.html
@@ -1,4 +1,4 @@
-<h2 class="restriction">Acesso restrito somente à administradores do sistema</h2>
+<h2 class="restriction">Efetue o seu cadastro para logar no sistema</h2>
 
 <section class="sign-in">
   <article class="header">
@@ -48,7 +48,7 @@
     (click)="submit()"
     [disabled]="signinForm.invalid || isFormDisabled()"
   >
-    <mat-icon color="white" style="vertical-align: middle; margin-right: 8px;">door_front</mat-icon>
+    
     ENTRAR
   </app-button>
 
