--- a/src/app/modules/shared/components/toolbar/toolbar.component.html
+++ b/src/app/modules/shared/components/toolbar/toolbar.component.html
@@ -9,4 +9,5 @@
 
 <mat-menu #menu="matMenu">
   <button mat-menu-item [routerLink]="['/home/login']">Sair</button>
+  <button mat-menu-item [routerLink]="['/gerencial/admin-modal']">Editar perfil</button>
 </mat-menu>
