--- a/src/app/modules/gerencial/components/clientes/components/edit-client-modal/edit-client-modal.component.scss
+++ b/src/app/modules/gerencial/components/clientes/components/edit-client-modal/edit-client-modal.component.scss
@@ -22,7 +22,7 @@ mat-dialog-actions {
   }
 
   .save-button {
-    background-color: #1e88e5;
+    background-color: #0000ff;
     color: #ffffff;
     border-radius: 4px;
     transition: transform 0.4s;
@@ -56,12 +56,15 @@ mat-dialog-actions {
 }
 
 .save_button {
-  border: none;
+  border: 2px solid black;
+  height: 30px;
   border-radius: 4px;
-  background-color: #1e88e5;
+  font-size: 18px;
+  color: white;
+  background-color: #0000ff;
 }
 
 .save_button:hover {
   cursor: pointer;
-  background-color: rgb(0, 162, 255);
+  background-color: rgb(0, 89, 255);
 }
