--- a/src/app/modules/gerencial/components/pedidos/components/edit-notification-modal/edit-notification-modal.component.scss
+++ b/src/app/modules/gerencial/components/pedidos/components/edit-notification-modal/edit-notification-modal.component.scss
@@ -56,12 +56,15 @@ mat-dialog-actions {
 }
 
 .save_button {
-  border: none;
+  border: 2px solid black;
+  height: 30px;
   border-radius: 4px;
-  background-color: #1e88e5;
+  font-size: 18px;
+  color: white;
+  background-color: #0000ff;
 }
 
 .save_button:hover {
   cursor: pointer;
-  background-color: rgb(0, 162, 255);
+  background-color: rgb(0, 89, 255);
 }
