--- a/src/app/modules/shared/styles/variables.scss
+++ b/src/app/modules/shared/styles/variables.scss
@@ -1,7 +1,8 @@
-$primary: #004D7C;
+$primary: #111fdd;
 $secondary: #1f1f1f;
 $error: #ff4d4f;
 $color-white: #fff;
 $color-black: #000;
 $color-background: #F5F5F5;
 $font-size: 14px;
+$secondary: #0080ff;
