--- a/src/app/modules/home/signin/signin.component.html
+++ b/src/app/modules/home/signin/signin.component.html
@@ -1,5 +1,4 @@
-<h2 class="restriction">Efetue o seu cadastro para logar no sistema</h2>
-
+<!--<h2 class="restriction">Efetue o seu cadastro para logar no sistema</h2>-->
 <section class="sign-in">
   <article class="header">
     <p class="welcome">
@@ -48,7 +47,7 @@
     (click)="submit()"
     [disabled]="signinForm.invalid || isFormDisabled()"
   >
-    
+
     ENTRAR
   </app-button>
 
