--- a/src/app/modules/home/signin/signin.component.scss
+++ b/src/app/modules/home/signin/signin.component.scss
@@ -65,6 +65,10 @@
     color: #0b1de7;
   }
 
+  .icon-person {
+    color: #0b1de7;
+  }
+
   .container_cadastro {
     text-align: center;
     margin-top: 15px;
