--- a/src/app/modules/home/signin/signin.component.html
+++ b/src/app/modules/home/signin/signin.component.html
@@ -22,11 +22,21 @@
       <mat-icon class="icon-mail" matPrefix>email</mat-icon>
       <input type="text" matInput formControlName="credential" />
     </mat-form-field>
+
     <mat-form-field appearance="fill">
       <mat-label class="font">Senha</mat-label>
       <mat-icon class="icon-password" matPrefix>lock</mat-icon>
       <input matInput [type]="hide ? 'password' : 'text'"  formControlName="password"/>
       <mat-icon matSuffix (click)="hide = !hide">{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label class="font">Papel</mat-label>
+      <mat-select [(value)]="selectedRole" required>
+        <mat-option value="User">Usuário</mat-option>
+        <mat-option value="Admin">Administrador</mat-option>
+      </mat-select>
+      <mat-icon class="icon-person" matPrefix>person_outline</mat-icon>
     </mat-form-field>
 
     <p class="primary">
