--- a/src/app/modules/shared/components/toolbar/toolbar.component.scss
+++ b/src/app/modules/shared/components/toolbar/toolbar.component.scss
@@ -5,9 +5,9 @@
   height: 80px;
   display: flex;
   align-items: center;
-  border: 2px solid rgb(48, 236, 253);
+  border: 3px solid rgb(0, 0, 0);
   padding: 0px 20px;
-  border-radius: 12px;
+  border-radius: 8px;
   box-shadow: rgba(50, 50, 93, 0) 0px 50px 100px -20px, rgba(0, 0, 0, 0.6) 0px 30px 60px -52px;
 
   img{
@@ -16,7 +16,7 @@
   }
 
   .welcome {
-    color: #feffff;
+    color: #000000;
     font-size: large;
     font-weight: lighter;
     font-family:'Times New Roman', Times, serif;
