--- a/src/app/modules/shared/components/button/button.component.scss
+++ b/src/app/modules/shared/components/button/button.component.scss
@@ -11,19 +11,19 @@
   font-family: 'Times New Roman', Times, serif;
   font-weight: bold;
   font-size: 18px;
-  border: 2px solid #0000ff;
+  border: 3px solid #06aeff;
   background-color: #000000;
   //background-color: $primary;
-  color: #1111ff;
+  color: #119cff;
   padding: 0 16px;
 
   &:hover,
   &.outline {
-    color: #0080ff;
+    color: #fcfcfc;
     //background-color: transparent;
-    font-size: 19px;
+    //font-size: 19px;
     //border: 1px solid $primary;
-    border: 3px solid #0000ff;
+    border: 3px solid #fbfbfc;
   }
 
   &.error {
