--- a/src/app/modules/shared/components/dashboard-card/dashboard-card.component.scss
+++ b/src/app/modules/shared/components/dashboard-card/dashboard-card.component.scss
@@ -15,7 +15,7 @@
     overflow: hidden;
     white-space: nowrap;
     font-size: 24px;
-    color: #0a0ae0;
+    color: #000000;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-style: oblique;
     font-weight: bold;
@@ -32,7 +32,7 @@
   }
 
   .description{
-    color: #1b18dd;
+    color: #000000;
     font-size: 15px;
     font-weight: bold;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
