--- a/src/app/modules/account/account.component.scss
+++ b/src/app/modules/account/account.component.scss
@@ -1,11 +1,39 @@
 .title_register {
+  padding-top: 10px;
   height: 55px;
+  width: 100%;
   text-align: center;
-  color: #0101f6;
+  color: #000000;
+  position: fixed;
   background-color: #d4ddff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   background-size: 100px;
   margin-bottom: -50px;
+  z-index: 500;
+}
+
+.icon-person {
+  color: black;
+}
+
+.icon-mail {
+  color: black;
+}
+
+.icon-password {
+  color: black;
+}
+
+.icon-role {
+  color: black;
+}
+
+.icon-image {
+  color: black;
+}
+
+.icon-phone {
+  color: black;
 }
 
 .container {
@@ -20,11 +48,11 @@
 
 .form {
   width: 900px;
-  padding-top: 100px;
+  padding-top: 80px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  //gap: -80px;
 }
 
 .mat-form-field {
@@ -39,7 +67,7 @@ mat-label {
 }
 
 .form{
-  color: #0101f6;
+  color: #000000;
   margin-bottom: 36px;
 }
 
