--- a/src/app/modules/shared/components/search/search.component.scss
+++ b/src/app/modules/shared/components/search/search.component.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 16px;
+  margin-top: 90px;
 
   .search-container {
     display: flex;
