--- a/src/app/modules/home/signin/signin.component.html
+++ b/src/app/modules/home/signin/signin.component.html
@@ -11,7 +11,7 @@
       Bem-vindo(a)!
     </p>
     <p class="description">
-      Digite as tuas credenciais aqui para logar no sistema
+      Faça aqui o login no sistema
     </p>
   </article>
 
@@ -46,9 +46,9 @@
       >
         help_outline
       </mat-icon>
-      Esqueceu a senha de acesso?
+      Esqueceu a senha?
       <span class="bold" [routerLink]="['../forgot']">
-        Clique aqui para redefinir!!
+        Clique para redefinir!!
       </span>
     </p>
   </form>
