--- a/src/app/modules/account/account.component.scss
+++ b/src/app/modules/account/account.component.scss
@@ -1,37 +1,23 @@
 .title_register {
   padding-top: 10px;
-  height: 55px;
+  height: 58px;
   width: 100%;
   text-align: center;
-  color: #000000;
+  color: #ffffff;
   position: fixed;
-  background-color: #d4ddff;
+  font-size: 28px;
+  font-weight: lighter;
+  background-color: #0911ec;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   background-size: 100px;
-  margin-bottom: -50px;
   z-index: 500;
 }
 
-.icon-person {
-  color: black;
-}
-
-.icon-mail {
-  color: black;
-}
-
-.icon-password {
-  color: black;
-}
-
-.icon-role {
-  color: black;
-}
-
-.icon-image {
-  color: black;
-}
-
+.icon-person,
+.icon-mail,
+.icon-password,
+.icon-role,
+.icon-image,
 .icon-phone {
   color: black;
 }
@@ -48,11 +34,10 @@
 
 .form {
   width: 900px;
-  padding-top: 80px;
+  padding-top: 150px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  //gap: -80px;
 }
 
 .mat-form-field {
@@ -86,7 +71,7 @@ button:hover {
 }
 
 .texto_voltar {
-  color: #111fdd;
+  color: #000000;
   font-size: 18px;
   font-family: 'Times New Roman', Times, serif;
   transition: transform 0.2s;
@@ -108,4 +93,82 @@ button:hover {
 .voltar {
   display: inline-flex;
   gap: 10px;
+}
+
+@media (max-width: 1024px) {
+  .form {
+    width: 100%;
+    padding: 20px;
+    padding-top: 100px;
+  }
+
+  .container {
+    max-width: 100%;
+    padding: 10px;
+  }
+
+  button {
+    width: 200px;
+  }
+
+  .title_register {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+}
+
+/* Para telas menores que 768px (smartphones grandes) */
+@media (max-width: 768px) {
+  .form {
+    width: 100%;
+    padding: 10px;
+    padding-top: 100px;
+  }
+
+  .container {
+    max-width: 100%;
+    padding: 10px;
+    margin: 20px auto;
+  }
+
+  button {
+    width: 180px;
+  }
+
+  .title_register {
+    font-size: 22px;
+  }
+}
+
+/* Para telas menores que 576px (smartphones pequenos) */
+@media (max-width: 576px) {
+  .form {
+    width: 100%;
+    padding: 5px;
+    padding-top: 100px;
+  }
+
+  .container {
+    max-width: 100%;
+    padding: 5px;
+  }
+
+  button {
+    width: 160px;
+    font-size: 15px;
+  }
+
+  .title_register {
+    font-size: 20px;
+    padding-top: 5px;
+    height: 50px;
+  }
+
+  .voltar {
+    gap: 5px;
+  }
+
+  .texto_voltar {
+    font-size: 16px;
+  }
 }
