--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -262,6 +262,10 @@
       width: 100%;
     }
 
+    .pedido {
+      margin-bottom: -60px;
+    }
+
     .home-components img {
       width: 120px;
     }
@@ -275,6 +279,10 @@
     .pedido,
     .register_button {
       width: 100%;
+    }
+
+    .pedido {
+      margin-bottom: -110px;
     }
 
     .home-components img {
