--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -289,4 +289,12 @@
       width: 120px;
     }
   }
+
+  @media (max-width: 576px) {
+    .pedido {
+      margin-bottom: -110px;
+    }
+  }
+
+
 }
