--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -263,6 +263,7 @@
     }
 
     .pedido {
+      margin-top: 40px;
       margin-bottom: -60px;
     }
 
@@ -282,6 +283,7 @@
     }
 
     .pedido {
+      margin-top: 40px;
       margin-bottom: -110px;
     }
 
@@ -292,6 +294,7 @@
 
   @media (max-width: 576px) {
     .pedido {
+      margin-top: 40px;
       margin-bottom: -110px;
     }
   }
