--- a/src/app/modules/home/signin/signin.component.html
+++ b/src/app/modules/home/signin/signin.component.html
@@ -47,7 +47,7 @@
         help_outline
       </mat-icon>
       Esqueceu a senha?
-      <span class="bold" [routerLink]="['../forgot']">
+      <span class="redefinir_senha bold" [routerLink]="['../forgot']">
         Clique para redefinir!!
       </span>
     </p>
