--- a/src/app/modules/home/signin/signin.component.scss
+++ b/src/app/modules/home/signin/signin.component.scss
@@ -74,6 +74,12 @@
     margin-bottom: 40px;
   }
 
+  .redefinir_senha:hover {
+    cursor: pointer;
+    color: white;
+    transition: 0.5s;
+  }
+
   .link_cadastro {
     list-style: none;
   }
