--- a/src/app/modules/shared/components/loading-effect/loading-effect.component.html
+++ b/src/app/modules/shared/components/loading-effect/loading-effect.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="isLoading" class="loading-overlay">
   <div class="loading-container">
     <div class="loading-spinner"></div>
-    <p>Loading...</p>
+    <!--<p>Loading...</p>-->
   </div>
 </div>
 
