--- a/src/app/modules/shared/components/loading-effect/loading-effect.component.scss
+++ b/src/app/modules/shared/components/loading-effect/loading-effect.component.scss
@@ -19,7 +19,7 @@
   width: 55px;
   height: 55px;
   border: 3px solid #f3f3f3;
-  border-top: 3px solid #2455e8;
+  border-top: 3px solid #ff187cef;
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
