feat: preço serviço automatizado

--- a/src/app/modules/gerencial/components/chaveiros/components/list/list.component.html
+++ b/src/app/modules/gerencial/components/chaveiros/components/list/list.component.html
@@ -1,8 +1,11 @@
 <app-list-table
   [listTable]="filteredChaveiros"
+  [useButton]="true"
+  buttonLabel="Adicionar chaveiro"
   [displayedColumns]="headers"
   [routerLinkAction]="'/gerencial/chaveiros/new'"
-  (clickRowEvent)="goToDetails($event)">
+  (clickRowEvent)="goToDetails($event)"
+>
 </app-list-table>
 
 <!-- [useButton]="true" -->
