--- a/src/app/modules/gerencial/components/servicos/components/add/add.component.html
+++ b/src/app/modules/gerencial/components/servicos/components/add/add.component.html
@@ -6,28 +6,56 @@
           <mat-form-field class="field-name" appearance="outline">
             <mat-label>Nome Cliente</mat-label>
             <mat-icon matPrefix>person_outline</mat-icon>
-            <input id="name" formControlName="cliente" type="text" matInput apenasLetras />
+            <input
+              id="name"
+              formControlName="cliente"
+              type="text"
+              matInput
+              apenasLetras
+            />
           </mat-form-field>
 
-          <mat-form-field class="field-price" appearance="outline">
+          <mat-form-field
+            class="field-price readonly-field"
+            appearance="outline"
+          >
             <mat-label>Preço</mat-label>
             <mat-icon matPrefix>money</mat-icon>
-            <input id="value" formControlName="value" type="text" matInput />
+            <input
+              id="value"
+              formControlName="value"
+              type="text"
+              matInput
+              matTooltip="Este campo não pode ser editado."
+              matTooltipPosition="above"
+              [readonly]="true"
+            />
+            <mat-icon matSuffix>block</mat-icon>
           </mat-form-field>
 
           <mat-form-field class="field-image" appearance="outline">
             <mat-label>URL da Imagem</mat-label>
             <mat-icon matPrefix>image</mat-icon>
-            <input id="imageUrl" matInput formControlName="imageUrl" type="text" />
+            <input
+              id="imageUrl"
+              matInput
+              formControlName="imageUrl"
+              type="text"
+            />
           </mat-form-field>
-
         </div>
 
         <div class="row">
           <mat-form-field class="field-service" appearance="outline">
             <mat-label>Serviço</mat-label>
             <mat-icon matPrefix>work</mat-icon>
-            <input id="service" formControlName="service" type="text" matInput apenasLetras />
+            <input
+              id="service"
+              formControlName="service"
+              type="text"
+              matInput
+              apenasLetras
+            />
           </mat-form-field>
         </div>
 
@@ -47,20 +75,18 @@
     <div class="buttons">
       <!--<app-form-actions (clickSaveEvent)="onSubmit()"></app-form-actions>-->
       <div class="actions">
-        <app-button
-          type="outline"
-          (click)="back()"
-        >Cancelar
-        </app-button>
-        <app-button
+        <app-button type="outline" (click)="back()">Cancelar </app-button>
+        <!--<app-button
           type="fill"
           (click)="clickSaveEvent.emit($event)"
           *ngIf="showSaveButton"
           (clickSaveEvent)="onSubmit()"
         >Salvar
+        </app-button>-->
+        <app-button type="fill" (click)="onSubmit()" *ngIf="showSaveButton"
+          >Salvar
         </app-button>
       </div>
     </div>
-
   </section>
 </form>
