--- a/src/app/modules/gerencial/components/chaveiros/components/add/add.component.html
+++ b/src/app/modules/gerencial/components/chaveiros/components/add/add.component.html
@@ -46,17 +46,16 @@
       <div class="buttons">
         <!--<app-form-actions (clickSaveEvent)="onSubmit()"></app-form-actions>-->
         <div class="actions">
-          <app-button
-            type="outline"
-            (click)="back()"
-          >Cancelar
-          </app-button>
-          <app-button
+          <app-button type="outline" (click)="back()">Cancelar </app-button>
+          <!--<app-button
             type="fill"
             (click)="clickSaveEvent.emit($event)"
             *ngIf="showSaveButton"
             (clickSaveEvent)="onSubmit()"
           >Salvar
+          </app-button>-->
+          <app-button type="fill" (click)="onSubmit()" *ngIf="showSaveButton"
+            >Salvar
           </app-button>
         </div>
       </div>
