--- a/src/app/modules/gerencial/components/clientes/components/add/add.component.scss
+++ b/src/app/modules/gerencial/components/clientes/components/add/add.component.scss
@@ -1,10 +1,10 @@
-@import '../../../../../shared/styles/shared.scss';
+@import "../../../../../shared/styles/shared.scss";
 
 .buttons {
   margin-top: 50px;
 }
 
-.actions{
+.actions {
   display: flex;
   justify-content: flex-end;
   height: 20px;
@@ -24,17 +24,17 @@
   }
 }
 
-.details{
+.details {
   display: grid;
   gap: 28px;
-
-  .wrapper{
-    .row{
+  margin-top: 100px;
+  .wrapper {
+    .row {
       display: flex;
       gap: 16px;
     }
 
-    p{
+    p {
       font-size: 14px;
       line-height: 24px;
       font-weight: bold;
