--- a/src/app/modules/gerencial/components/servicos/components/list/list.component.html
+++ b/src/app/modules/gerencial/components/servicos/components/list/list.component.html
@@ -1,8 +1,11 @@
 <app-list-table
   [listTable]="services"
   [displayedColumns]="headers"
+  [useButton]="true"
+  buttonLabel="Adicionar serviço"
   [routerLinkAction]="'/gerencial/servicos/new'"
-  (clickRowEvent)="goToDetails($event)">
+  (clickRowEvent)="goToDetails($event)"
+>
 </app-list-table>
 
 <!-- [useButton]="true" -->
