--- a/src/app/modules/shared/components/button/button.component.scss
+++ b/src/app/modules/shared/components/button/button.component.scss
@@ -8,21 +8,17 @@
   border: none;
   cursor: pointer;
   transition: 0.3s;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-weight: bold;
   font-size: 18px;
   border: 3px solid #06aeff;
   background-color: #000000;
-  //background-color: $primary;
   color: #119cff;
   padding: 0 16px;
 
   &:hover,
   &.outline {
     color: #fcfcfc;
-    //background-color: transparent;
-    //font-size: 19px;
-    //border: 1px solid $primary;
     border: 3px solid #fbfbfc;
   }
 
