feat: ajustar css

--- a/src/app/modules/gerencial/components/servicos/components/details/details.component.scss
+++ b/src/app/modules/gerencial/components/servicos/components/details/details.component.scss
@@ -8,7 +8,7 @@
 }
 
 .delete_button:hover {
-  color: #ff0000;
+  color: #ff0080;
   cursor: pointer;
 }
 
@@ -69,7 +69,7 @@
   border: 1px solid black;
   color: black;
   font-weight: bold;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .close-button:hover {
