--- a/src/app/modules/shared/components/loading-effect/loading-effect.component.html
+++ b/src/app/modules/shared/components/loading-effect/loading-effect.component.html
@@ -1,7 +1,14 @@
 <div *ngIf="isLoading" class="loading-overlay">
   <div class="loading-container">
     <div class="loading-spinner"></div>
-    <!--<p>Loading...</p>-->
+    <p class="loading-text">
+      <span class="letter">L</span>
+      <span class="letter">o</span>
+      <span class="letter">a</span>
+      <span class="letter">d</span>
+      <span class="letter">i</span>
+      <span class="letter">n</span>
+      <span class="letter">g</span>
+    </p>
   </div>
 </div>
-
