--- a/src/app/modules/shared/components/loading-effect/loading-effect.component.scss
+++ b/src/app/modules/shared/components/loading-effect/loading-effect.component.scss
@@ -15,6 +15,63 @@
   text-align: center;
 }
 
+.loading-text {
+  display: flex;
+  justify-content: center;
+  font-size: 1.3rem;
+  margin-top: 2px;
+  font-weight: lighter;
+  margin-left: -14px;
+}
+
+.letter {
+  animation: color-change 2s infinite;
+  animation-delay: calc(var(--delay, 0) * 0.5s);
+  display: inline-block;
+  transition: color 0.5s ease-in-out;
+}
+
+@keyframes color-change {
+  0% {
+    color: blue;
+  }
+  25% {
+    color: green;
+  }
+  50% {
+    color: purple;
+  }
+  75% {
+    color: yellow;
+  }
+  100% {
+    color: blue;
+  }
+}
+
+/* Aplicar atraso baseado na posição da letra */
+.letter:nth-child(1) {
+  --delay: 0;
+}
+.letter:nth-child(2) {
+  --delay: 1;
+}
+.letter:nth-child(3) {
+  --delay: 2;
+}
+.letter:nth-child(4) {
+  --delay: 3;
+}
+.letter:nth-child(5) {
+  --delay: 4;
+}
+.letter:nth-child(6) {
+  --delay: 5;
+}
+.letter:nth-child(7) {
+  --delay: 6;
+}
+
 .loading-spinner {
   width: 55px;
   height: 55px;
@@ -25,6 +82,10 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
